--- a/Text_Mining.ipynb
+++ b/Text_Mining.ipynb
@@ -367,7 +367,8 @@
       },
       "cell_type": "markdown",
       "source": [
-        "# N-Grams"
+        "# N Grams\n",
+        "phrases"
       ]
     },
     {
@@ -617,7 +618,8 @@
       },
       "cell_type": "markdown",
       "source": [
-        "# Tf-Idf"
+        "# Tf-Idf\n",
+        "giving more weight to words uncommon to this context"
       ]
     },
     {
@@ -704,18 +706,22 @@
       },
       "cell_type": "markdown",
       "source": [
-        "# Fuzzy String Matching"
+        "# Fuzzy String Matching\n",
+        "useful for typos"
       ]
     },
     {
       "metadata": {
-        "id": "ga8E7OIc1hh6",
-        "colab_type": "text"
+        "id": "-bua7f1x25ma",
+        "colab_type": "code",
+        "colab": {}
       },
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
-        "useful for typos"
-      ]
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "metadata": {
@@ -724,18 +730,22 @@
       },
       "cell_type": "markdown",
       "source": [
-        "# Word Vectors"
+        "# Word Vectors\n",
+        "useful for capturing meaning"
       ]
     },
     {
       "metadata": {
-        "id": "KpRDNCy81jLW",
-        "colab_type": "text"
+        "id": "b9OK3GYN2-UC",
+        "colab_type": "code",
+        "colab": {}
       },
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
-        "useful for extracting meaning"
-      ]
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
