--- a/DeepSpeech_STT.ipynb
+++ b/DeepSpeech_STT.ipynb
@@ -125,6 +125,8 @@
       },
       "cell_type": "code",
       "source": [
+        "import wave \n",
+        "\n",
         "def frame_rate(audio_path):\n",
         "  fin = wave.open(audio_path, 'rb')\n",
         "  sample_rate = fin.getframerate()\n",
