--- a/Text_Mining.ipynb
+++ b/Text_Mining.ipynb
@@ -618,7 +618,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "# Tf-Idf\n",
+        "# Tf-Idf (Sklearn)\n",
         "giving more weight to words uncommon to this context"
       ]
     },
@@ -695,6 +695,83 @@
         "max_freq = max(ranked_ngrams)[0] * 3\n",
         "scaled_tfidf = [(freq*max_freq,word) for freq,word in ranked_tfidf]\n",
         "compare(ranked_ngrams, scaled_tfidf, \"pre-tfidf\", \"post-tfidf\")"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "8_7OVjrztIhW",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "# Montezuma Ranking (Gensim)"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "Rwg0JdUFtJZk",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "from gensim.summarization import keywords\n",
+        "ranked_gensim = [(f,w) for w,f in keywords(example_document,scores=True)]"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "4vaRuEBlt7M2",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "display(ranked_gensim)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "8L-v5PiFuV_E",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "from gensim.summarization import mz_keywords\n",
+        "ranked_montezuma = [(f,w) for w,f in mz_keywords(example_document,scores=True, weighted=False)]"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "dvJK3vGfvT5w",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "display(ranked_montezuma)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "uUw8vUlMvXyV",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "compare(ranked_gensim, ranked_mz)"
       ],
       "execution_count": 0,
       "outputs": []
