--- a/Text_Mining.ipynb
+++ b/Text_Mining.ipynb
@@ -778,6 +778,107 @@
     },
     {
       "metadata": {
+        "id": "1DH80yURwuTe",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "# Document Topic Modelling (DTM - Gensim)"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "YMXsJFnXwxhR",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "from gensim import corpora\n",
+        "\n",
+        "class DTMcorpus(corpora.textcorpus.TextCorpus):\n",
+        "    def get_texts(self):\n",
+        "        return self.input\n",
+        "    def __len__(self):\n",
+        "        return len(self.input)\n",
+        "\n",
+        "!git clone https://github.com/magsilva/dtm"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "TLjsLpP1xggK",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "corpus = DTMcorpus([lemmatised_document.split()])"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "u7FXicCDxvlZ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "from gensim.models.wrappers.dtmmodel import DtmModel\n",
+        "dtm_path = 'dtm/bin/dtm-linux64'\n",
+        "time_seq = [1]\n",
+        "dtm = DtmModel(dtm_path, corpus, time_seq, num_topics=1, id2word=corpus.dictionary, initialize_lda=True)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "ZSWAwQ5Bx2zo",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "ranked_dtm = dtm.show_topic(topicid=0, time=0, topn=30)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "b3_5bD2MyEOM",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "display(ranked_dtm)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "lGuiQkv7yi-9",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "max_freq = max(ranked_lemma)[0] * 15\n",
+        "scaled_dtm = [(freq*max_freq,word) for freq,word in ranked_dtm]\n",
+        "compare(scaled_dtm, ranked_lemma,'DTM', 'Lemma')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
         "id": "cwsmn5Q0tTNm",
         "colab_type": "text"
       },
