--- a/Sentiment_Analysis.ipynb
+++ b/Sentiment_Analysis.ipynb
@@ -336,20 +336,22 @@
       "cell_type": "code",
       "source": [
         "import numpy as np\n",
-        "import torchmoji, emoji, json\n",
+        "import emoji, json\n",
+        "from torchmoji.global_variables import PRETRAINED_PATH, VOCAB_PATH\n",
+        "from torchmoji.sentence_tokenizer import SentenceTokenizer\n",
         "from torchmoji.model_def import torchmoji_emojis\n",
         "  \n",
         "EMOJIS = \":joy: :unamused: :weary: :sob: :heart_eyes: :pensive: :ok_hand: :blush: :heart: :smirk: :grin: :notes: :flushed: :100: :sleeping: :relieved: :relaxed: :raised_hands: :two_hearts: :expressionless: :sweat_smile: :pray: :confused: :kissing_heart: :heartbeat: :neutral_face: :information_desk_person: :disappointed: :see_no_evil: :tired_face: :v: :sunglasses: :rage: :thumbsup: :cry: :sleepy: :yum: :triumph: :hand: :mask: :clap: :eyes: :gun: :persevere: :smiling_imp: :sweat: :broken_heart: :yellow_heart: :musical_note: :speak_no_evil: :wink: :skull: :confounded: :smile: :stuck_out_tongue_winking_eye: :angry: :no_good: :muscle: :facepunch: :purple_heart: :sparkling_heart: :blue_heart: :grimacing: :sparkles:\".split(' ')\n",
-        "model = torchmoji_emojis(torchmoji.global_variables.PRETRAINED_PATH)\n",
-        "with open(torchmoji.global_variables.VOCAB_PATH, 'r') as f:\n",
+        "model = torchmoji_emojis(PRETRAINED_PATH)\n",
+        "with open(VOCAB_PATH, 'r') as f:\n",
         "  vocabulary = json.load(f)\n",
+        "st = SentenceTokenizer(vocabulary, 30)\n",
         "\n",
         "def deepmojify(sentence,top_n =5):\n",
         "  def top_elements(array, k):\n",
         "    ind = np.argpartition(array, -k)[-k:]\n",
         "    return ind[np.argsort(array[ind])][::-1]\n",
         "\n",
-        "  st = torchmoji.sentence_tokenizer.SentenceTokenizer(vocabulary, 30)\n",
         "  tokenized, _, _ = st.tokenize_sentences([sentence])\n",
         "  prob = model(tokenized)[0]\n",
         "  emoji_ids = top_elements(prob, top_n)\n",
