--- a/Sentiment_Analysis.ipynb
+++ b/Sentiment_Analysis.ipynb
@@ -252,18 +252,38 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "ZjGnyAcFsuD3",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "!pip3 install torch==1.0.1 -f https://download.pytorch.org/whl/cpu/stable \n",
+        "!git clone https://github.com/huggingface/torchMoji\n",
+        "import os\n",
+        "os.chdir('torchMoji')\n",
+        "!pip3 install -e ."
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yfBLwAM0vjL4",
+        "colab_type": "text"
+      },
+      "source": [
+        "type \"yes\" when prompted"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "FhbEFFbo3EgG",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "!git clone https://github.com/huggingface/torchMoji\n",
-        "\n",
-        "import os\n",
-        "os.chdir('torchMoji')\n",
-        "\n",
-        "!pip3 install -e .\n",
-        "\n",
         "!python3 scripts/download_weights.py"
       ],
       "execution_count": 0,
